added summary() function for map() outputs

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,7 @@
 
 S3method(map,list)
 S3method(posterior,stanfit)
+S3method(summary,maxposterior)
 export(data_align)
 export(data_design_matrix)
 export(data_dims)
@@ -11,3 +12,4 @@ export(map)
 export(model_code)
 export(model_data)
 export(posterior)
+export(summary)
