--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: bde
 Type: Package
 Title: Bycatch and discard estimation for New Zealand fisheries
-Version: 1.0.0.1126
+Version: 1.0.0.1131
 Date: 2018-09-08
 Author: Charles T T Edwards
 Maintainer: Charles T T Edwards <charles.edwards@niwa.co.nz>
@@ -27,5 +27,6 @@ Collate:
     'model_code.R'
     'model_data.R'
     'posterior.R'
+    'summary.R'
     'zzz.R'
 RoxygenNote: 6.0.1
