--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,10 +1,10 @@
 Package: bde
 Type: Package
 Title: Bycatch and discard estimation for New Zealand fisheries
-Version: 1.0.0.1167
+Version: 1.0.1.0
 Date: 2020-09-18
 Author: Charles T T Edwards
-Maintainer: Charles T T Edwards <charles.edwards@niwa.co.nz>
+Maintainer: Charles T T Edwards <cescapecs@gmail.com>
 Description: Implements a two part (binomial/log-normal) statistical model to estimate the catch rate from observer data and applies this estimate to unobserved commercial effort to estimate the total bycatch and discards for non-target species.
 License: GPL (>=3)
 LazyData: true
@@ -13,8 +13,8 @@ Suggests:
     knitr,
     testthat
 Depends:
-    R (>= 3.4.1),
-	rstan (>= 2.17.3)
+    R (>= 4.0.0),
+	rstan (>= 2.21.0)
 Imports:
     methods
 Collate: 
